# FigurasPolimorfismo

./: README.md
Figuras Geometricas/: CMakeLists.txt  main.cpp
Figuras Geometricas/Model/: Circulo.cpp  Circulo.h  Cuadrado.cpp  Cuadrado.h  Figura.cpp  Figura.h  Rectangulo.cpp  Rectangulo.h
Figuras Geometricas/View/: View.cpp  View.h
FigurasNivia/: CMakeLists.txt  Circulo.cpp  Circulo.h  Cuadrado.cpp  Cuadrado.h  FiguraGeometrica.cpp  FiguraGeometrica.h  Rectangulo.cpp  Rectangulo.h  TrianguloRectangulo.cpp  TrianguloRectangulo.h  View.cpp  View.h  main.cpp
